Fix build failure Reformat code for readability